# fastapi-rbac

./: .env  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 9c2f4eaf9856_initial_migration.py
app/: main.py
app/api/: __init__.py  users.py
app/api/routes/: auth.py  role.py
app/auth/dependencies/: user_db.py
app/auth/managers/: user.py
app/auth/models/: permission.py  role.py  role_permission.py  user.py  user_role.py
app/auth/services/: role_service.py
app/core/: config.py  logging.py  middleware.py  security.py
app/db/: base.py  init_db.py  mixins.py  session.py
app/models/: __init__.py  permission.py  role.py  role_permissions.py  user.py  user_roles.py
app/schemas/: user.py
app/schemas/auth/: role.py
app/services/: user_service.py
tests/: test_logging.py  test_models.py
